# py_simple_ttk

./: .gitignore  MANIFEST.in  Pipfile  README.md  build.bat  build_config.json  changelog.json  generate_readme.py  ini.json  pyproject.toml  readme.md  requirements.txt  setup.py  test.py  test_form.py  todo.txt
examples/: __init__.py  hamburger_demo.json  hamburger_demo.py  image_encoder.json  image_encoder.py  list_compare.json  list_compare.py  tic_tac_toe.json  tic_tac_toe.py
py_simple_ttk/: __init__.py  app.py
py_simple_ttk/assets/themes/: black.tcl  console_green.tcl
py_simple_ttk/mega_widgets/: chat.py  launcher.py  notes.py  profile_manager.py  shopping_list.py  tictactoe.py  timecard_maker.py  wattage_calculator.py
py_simple_ttk/pillow_widgets/: GifLoader.py  ImageCore.py  PillowWidgetsCore.py  explorer.py
py_simple_ttk/utils/: HTML_Generator.py  History.py  Logging.py  MD_Generator.py  ProfilesSystem.py  color.py  scaling.py  utils.py  zip_packager.py  zip_stream_handling.py
py_simple_ttk/widgets/: ButtonWidgets.py  CheckbuttonWidgets.py  ComboboxWidgets.py  ConsoleWidgets.py  ConstrainedEntryWidgets.py  CounterWidgets.py  EntryWidgets.py  FrameStack.py  FrameWidgets.py  KeyPadWidgets.py  LabelWidgets.py  LabeledMultiWidget.py  Labeler.py  ListBoxWidgets.py  MultiWidget.py  OptionMenuWidgets.py  ProgressbarWidgets.py  RadiobuttonWidgets.py  ResizableCanvas.py  ScaleWidgets.py  ScrolledCanvas.py  Scroller.py  SizegripWidgets.py  SpinboxWidgets.py  SuperWidget.py  Tabs.py  TextWidgets.py  ToolTip.py  ToplevelWidgets.py  TreeviewWidgets.py  WidgetsCore.py  __init__.py
src/: __init__.py  __main__.py  version.py
src/py_simple_ttk/: __init__.py  app.py  form.py  version.py
src/py_simple_ttk/mega_widgets/: chat.py  launcher.py  profile_manager.py
src/py_simple_ttk/pillow_widgets/: GifLoader.py  ImageCore.py  PillowWidgetsCore.py
src/py_simple_ttk/utils/: ProfilesSystem.py  TXT_Generator.py  Threader.py  color.py  scaling.py  tcl_commands.py  utils.py
src/py_simple_ttk/widgets/: ButtonWidgets.py  ConsoleWidgets.py  (+20 more)
tools/: alphabet_generator.py  ini_generator.py
(+2 files in other folders)
