[build-system]
requires = [
    "setuptools",
    "py_simple_readme",
    "py_simple_lorem",
]
build-backend = "setuptools.build_meta"

[project]
name = "py_simple_ttk"
readme = "README.md"
dynamic = [
    "version",
]
description = "Tkinter themes don't have to be hard.\n"
authors = [
    { name = "Andrew Spangler", email = "AndrewSpangler@users.noreply.github.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = []
keywords = []

[project.license]
text = "LICENSE"

[project.urls]
homepage = "https://GitHub.com/AndrewSpangler/py_simple_ttk/"
"bug tracker" = "https://GitHub.com/AndrewSpangler/py_simple_ttk/issues"
documentation = "https://GitHub.com/AndrewSpangler/py_simple_ttk/"
repository = "https://GitHub.com/AndrewSpangler/py_simple_ttk/"

[tool.setuptools.dynamic.version]
attr = "py_simple_ttk.version"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "*",
]
